# qenex-pathfinder

./: .gitignore  .pathfinder.yml.example  LICENSE  README.md  pyproject.toml
pathfinder/: __main__.py  cli.py  config.py  finding.py  mcp_server.py  scanner.py
pathfinder/formatters/: __init__.py  json_fmt.py  sarif.py  text.py
pathfinder/rules/: __init__.py  async_sync.py  command_injection.py  cors.py  credentials.py  crypto.py  dependencies.py  docker.py  network.py  permissions.py  sql_injection.py  systemd.py  xxe.py
tests/: conftest.py  test_rules_async.py  test_rules_cors.py  test_rules_credentials.py  test_rules_crypto.py  test_rules_deps.py  test_rules_infra.py  test_rules_injection.py  test_rules_xxe.py  test_scanner.py
